# job-applier

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260328_000001_initial_sqlite_schema.py  20260328_000002_job_posting_search_fields.py  20260522_000003_submission_resume_mode_metadata.py  20260527_000004_submission_target_language.py  20260527_000005_job_posting_detail_quality_metadata.py  20260527_000006_job_posting_detail_description_score.py  20260603_000007_apply_action_memory.py  20260603_000008_drop_apply_action_memory_table.py  20260604_000009_resume_source_snapshots.py
apps/backend/control-api/: pyproject.toml
apps/backend/control-api/src/job_applier/: main.py
apps/backend/control-api/src/job_applier/interface/: __init__.py
apps/backend/control-api/src/job_applier/interface/http/: app.py  dependencies.py
apps/backend/control-api/src/job_applier/interface/http/routes/: agent.py  applications.py  panel.py
apps/backend/execution-worker/: pyproject.toml
apps/backend/execution-worker/src/job_applier/application/: agent_execution.py
apps/backend/execution-worker/src/job_applier/infrastructure/linkedin/: __init__.py  apply_memory.py  browser_agent.py  easy_apply.py  job_email.py  playwright_mcp.py  question_resolution.py  recruiter_connect.py  search.py  search_score_cache.py  stagehand.py
apps/backend/execution-worker/tests/: __init__.py  test_agent_execution.py  test_apply_memory.py  test_browser_agent_interactive_field.py  test_easy_apply_resume_verification.py  test_job_email.py  test_question_resolution.py  test_recruiter_connect.py  test_search_score_cache.py
apps/backend/resume-worker/: pyproject.toml
apps/backend/resume-worker/src/job_applier/infrastructure/: resume_dynamic.py
apps/backend/resume-worker/src/job_applier/tools/: __init__.py  audit_dynamic_resume.py  generate_mock_dynamic_resumes.py
apps/backend/resume-worker/tests/: test_audit_dynamic_resume.py  test_resume_dynamic_localization.py  test_resume_source_snapshot_pipeline.py
apps/backend/shared/: pyproject.toml
apps/backend/shared/src/job_applier/: __init__.py  cost_observability.py  observability.py  recruiter_connect_observability.py  resume_theme.py  settings.py
apps/backend/shared/src/job_applier/application/: __init__.py  config.py  panel.py  repositories.py  schemas.py  snapshotting.py
apps/backend/shared/src/job_applier/domain/: __init__.py  entities.py  enums.py  versioning.py
apps/backend/shared/src/job_applier/infrastructure/: __init__.py  language_support.py  local_panel_store.py
apps/backend/shared/src/job_applier/infrastructure/cache/: __init__.py  repositories.py
apps/backend/shared/src/job_applier/infrastructure/in_memory/: __init__.py
apps/backend/shared/src/job_applier/infrastructure/sqlite/: __init__.py  models.py  repositories.py
apps/backend/shared/tests/: __init__.py  test_cost_observability.py  test_diskcache_apply_action_memory_repository.py  test_observability.py  test_private_metadata_panel.py  test_recruiter_connect_observability.py  test_sqlite_resume_source_snapshot_repository.py
apps/panel/: next.config.ts  package-lock.json  package.json
apps/panel/app/: layout.tsx  page.tsx
apps/panel/components/: ai-form.tsx  application-history.tsx  operational-dashboard.tsx  overview-cards.tsx  panel-shell.tsx  preferences-form.tsx  profile-form.tsx  schedule-form.tsx  status-summary.tsx
apps/panel/lib/: api.ts  types.ts
docker/: entrypoint.sh
docs/: agentic-hardening-plan.md  internal-beta.md  on-premise.md  testing-strategy.md
docs/decisions/: 0001-panel-stack.md
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css
frontend/app/preferences/: page.tsx
frontend/components/: feedback-banner.tsx  overview-cards.tsx
frontend/components/ui/: input.tsx  select.tsx  switch.tsx
frontend/lib/: api.ts  types.ts
project-context/: 00 - Start Here.md  01 - Product Overview.md  02 - Architecture.md  03 - Pipeline Search Score Apply.md  04 - Resume Modes.md  05 - Dynamic Resume.md  06 - Capability Profile.md  07 - Internationalization.md  08 - Panel and Settings.md  09 - Validation and Operations.md  10 - Known Risks.md  11 - Decisions Log.md  12 - File Map.md  13 - Recent Worklog.md  14 - Handoff Prompt Template.md
project-context/.obsidian/: workspace.json
scripts/: audit_dynamic_resume.py  generate_mock_dynamic_resumes.py
src/job_applier/: __init__.py  observability.py  settings.py
src/job_applier/application/: __init__.py  agent_execution.py  config.py  (+6 more)
tests/: __init__.py
tests/e2e/: test_applications_api.py  test_controlled_agent_flow.py  test_healthcheck.py  test_panel_api.py
tests/integration/: sqlite_helpers.py  test_alembic_sqlite.py  test_already_applied_smoke.py  test_linkedin_easy_apply_submitter.py  test_mirrored_execution_store.py  test_sqlite_repositories.py  test_submission_history.py
tests/unit/: test_agent_execution.py  test_browser_agent.py  test_config_and_schemas.py  test_domain_entities.py  test_job_scoring.py  test_linkedin_easy_apply.py  test_linkedin_search.py  test_local_panel_store.py  test_observability.py  test_playwright_mcp.py  test_recruiter_connect.py  test_run_output.py  test_runtime_settings.py  test_snapshotting.py
tmp/: prod_full_runner.py  prod_targeted_job_run.py  prod_targeted_job_run_visible.py
workspace_meta/: __init__.py
(+38 files in other folders)
