[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "job-applier-workspace"
version = "0.1.0"
description = "Monorepo workspace for Job Applier backend applications."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Thiago Martins" }]
dependencies = []

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "mypy>=1.16.0,<2.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["workspace_meta"]

[tool.uv.workspace]
members = [
  "apps/backend/control-api",
  "apps/backend/execution-worker",
  "apps/backend/resume-worker",
  "apps/backend/shared",
]

[tool.uv.sources]
job-applier-control-api = { workspace = true }
job-applier-execution-worker = { workspace = true }
job-applier-resume-worker = { workspace = true }
job-applier-shared = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 100
src = [
  "apps/backend/control-api/src",
  "apps/backend/execution-worker/src",
  "apps/backend/resume-worker/src",
  "apps/backend/shared/src",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "apps/backend/control-api/src",
  "apps/backend/execution-worker/src",
  "apps/backend/resume-worker/src",
  "apps/backend/shared/src",
]
