[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "job-applier-execution-worker"
version = "0.1.0"
description = "LinkedIn search, scoring, and apply execution worker for Job Applier."
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Thiago Martins" }]
dependencies = [
  "job-applier-shared",
  "job-applier-resume-worker",
  "playwright>=1.52.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "stagehand>=3.19.4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["job_applier*"]
